[gd_scene load_steps=6 format=2]

[ext_resource path="res://base nodes/output.tscn" type="PackedScene" id=1]
[ext_resource path="res://base nodes/clock.gd" type="Script" id=2]
[ext_resource path="res://Assets/AND.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Icons/Time.svg" type="Texture" id=4]
[ext_resource path="res://Assets/ANDHover.tres" type="StyleBox" id=5]

[node name="Clock" type="Node2D"]
script = ExtResource( 2 )

[node name="Gate" type="Button" parent="."]
margin_left = -32.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 14.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Gate"]
visible = false
margin_right = 102.0
margin_bottom = 30.0
text = "Clock"

[node name="Outputs" type="Control" parent="."]
margin_left = 54.0
margin_top = -16.0
margin_right = 54.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" parent="Outputs" instance=ExtResource( 1 )]
margin_left = -14.8364
margin_top = 3.08677
margin_right = 10.1636
margin_bottom = 28.0868

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = -80.0
margin_top = -10.0
margin_right = -12.0
margin_bottom = 8.0
rect_min_size = Vector2( 40, 0 )
step = 0.1
value = 1.0
rounded = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="SpinBox"]
margin_right = 20.0
margin_bottom = 18.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Gate" to="." method="_on_Gate_button_down"]
[connection signal="button_up" from="Gate" to="." method="_on_Gate_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
